@@ -396,7 +396,7 @@ class Channel(chn_class.Channel):
         extra = FolderItem(
             LanguageHelper.get_localized_string(LanguageHelper.Genres),
             "https://www.npostart.nl/programmas",
-            content_type=contenttype.FILES)
+            content_type=contenttype.VIDEOS)
         extra.complete = True
         extra.dontGroup = True
         items.append(extra)
@@ -404,7 +404,7 @@ class Channel(chn_class.Channel):
         extra = FolderItem(
             "{} (A-Z)".format(LanguageHelper.get_localized_string(LanguageHelper.TvShows)),
             "#alphalisting",
-            content_type=contenttype.FILES)
+            content_type=contenttype.TVSHOWS)
         extra.complete = True
         extra.description = "Alfabetische lijst van de NPO.nl site."
         extra.dontGroup = True
